--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 services: mongodb
 cache:
   directories:
-  - "node_modules"
+    - "node_modules"
 sudo: false
 install:
   - npm install
@@ -13,6 +13,6 @@ script:
 deploy:
   - provider: script
     skip_cleanup: true
-    script: chmod +x deploy.sh && deploy.sh
+    script: chmod +x ./deploy.sh && ./deploy.sh
     on:
       branch: master
